--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -2765,7 +2765,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Cardano epoch {nextEpochNumber} starts in",
+        "defaultMessage": "!!!次のCardanoエポック開始まであと",
         "description": "Headline for the Delegation center.",
         "end": {
           "column": 3,
@@ -2812,7 +2812,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!The Delegation Center is not available because you don't have any wallets.",
+        "defaultMessage": "!!!The delegation center is not available because you currently do not have any Shelley-compatible wallets.",
         "description": "\"No wallets\" headLine on the Delegation centre Page.",
         "end": {
           "column": 3,
@@ -2826,7 +2826,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Create a new wallet (or restore an existing one) then come back here to delegate your stake.",
+        "defaultMessage": "!!!Create a new wallet and transfer in a minimum of {minDelegationFunds} ada (or restore an existing wallet with funds), then return here to delegate your stake.",
         "description": "\"No wallets\" instructions on the Delegation centre Page.",
         "end": {
           "column": 3,
@@ -2840,7 +2840,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Create wallet",
+        "defaultMessage": "!!!Create a wallet",
         "description": "Label for \"Create New Wallet\" button on the Delegation centre Page.",
         "end": {
           "column": 3,
@@ -3224,8 +3224,8 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Delegate wallet",
-        "description": "Title \"Delegate wallet\" on the delegation setup \"choose stake pool\" dialog.",
+        "defaultMessage": "!!!Choose a stake pool",
+        "description": "Title \"Choose a stake pool\" on the delegation setup \"choose stake pool\" dialog.",
         "end": {
           "column": 3,
           "line": 36
@@ -3238,7 +3238,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Currently selected stake pool",
+        "defaultMessage": "!!!Currently selected stake pool:",
         "description": "Description on the delegation setup \"choose stake pool\" dialog.",
         "end": {
           "column": 3,
@@ -3252,7 +3252,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Select a stake pool to delegate to for <span>{selectedWalletName}<span>  wallet.",
+        "defaultMessage": "!!!Select a stake pool to receive your delegated funds in the <span>{selectedWalletName}<span> wallet.",
         "description": "Select / Selected pool section label on the delegation setup \"choose stake pool\" dialog.",
         "end": {
           "column": 3,
@@ -3308,7 +3308,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Pick one of your recent stake pool choices:",
+        "defaultMessage": "!!!Choose one of your recent stake pool choices:",
         "description": "Recent \"Pool\" choice section label on the delegation setup \"choose stake pool\" dialog.",
         "end": {
           "column": 3,
@@ -3397,7 +3397,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Choose a wallet with funds that you want to delegate. The selected wallet must contain a <span>minimum amount of {minDelegationFunds} ADA</span> for delegation to be available",
+        "defaultMessage": "!!!Choose a wallet that holds the funds you want to delegate. The selected wallet must contain a <span>minimum amount of {minDelegationFunds} ADA</span> for delegation to be an option.",
         "description": "Description on the delegation setup \"choose wallet\" step dialog.",
         "end": {
           "column": 3,
@@ -3528,7 +3528,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Confirm your delegation for <span>{selectedWalletName}<span> wallet to <span>[{selectedPoolTicker}]<span> stake pool by posting your delegation preferences on the Cardano blockchain.",
+        "defaultMessage": "!!!Confirm your delegation choice to <span>[{selectedPoolTicker}]<span> stake pool for your <span>{selectedWalletName}<span> wallet by posting your delegation preferences on the Cardano blockchain.",
         "description": "Description on the delegation setup \"confirmation\" step dialog.",
         "end": {
           "column": 3,
@@ -3748,7 +3748,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Delegation not available",
+        "defaultMessage": "!!!Delegation is not currently available",
         "description": "Title \"Delegation Setup\" on the delegation setup not available dialog.",
         "end": {
           "column": 3,
@@ -3762,7 +3762,7 @@
         }
       },
       {
-        "defaultMessage": "!!!None of your wallets have the <span>minimum amount of {minDelegationFunds} ada</span> required for delegation",
+        "defaultMessage": "!!!None of your wallets currently hold the <span>minimum amount of {minDelegationFunds} that is required for delegation options.",
         "description": "Description on the delegation setup not available dialog.",
         "end": {
           "column": 3,
@@ -3823,7 +3823,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
+        "defaultMessage": "!!!Your new delegation preferences are now posted on the Cardano blockchain. <strong>These preferences will take effect after both the current and the next Cardano epochs have completed in {timeUntilNextEpochStart}.</strong>. During this time, your previous delegation preferences remain active.",
         "description": "Description \"line 2\" on the delegation setup \"success\" step dialog.",
         "end": {
           "column": 3,
@@ -4278,7 +4278,7 @@
         }
       },
       {
-        "defaultMessage": "!!!<p>Rewards earned by delegating your stake are automatically collected into your reward account.</p><p>Rewards earned on the Incentivized Testnet are not added to your Rewards wallet balance. They will be paid to you in real ada on the Cardano mainnet after the end of the Incentivized Testnet.</p><p>If you are using funds from this wallet to operate a stake pool, the rewards displayed here may include your pledged stake, which will not be counted when reward balances are paid out on the Cardano mainnet.</p>",
+        "defaultMessage": "!!!Rewards earned by delegating your stake are automatically collected into your reward account and added to your wallet balance.",
         "description": "Rewards description text on staking rewards page",
         "end": {
           "column": 3,
@@ -9970,73 +9970,45 @@
         }
       },
       {
-        "defaultMessage": "!!!12 words <em>(legacy wallet)</em>",
-        "description": "Label for the \"labelDaedalusWalletKindBalance12Word\" ITN checkbox.",
+        "defaultMessage": "!!!12 words <em>(Byron legacy wallet)</em>",
+        "description": "Label for the \"labelDaedalusWalletKind12WordByron\" checkbox.",
         "end": {
           "column": 3,
-          "line": 59
+          "line": 58
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
-        "id": "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn",
+        "id": "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron",
         "start": {
-          "column": 43,
+          "column": 38,
           "line": 53
         }
       },
       {
-        "defaultMessage": "!!!12 words",
-        "description": "Label for the \"labelDaedalusWalletKindBalance12Word\" checkbox.",
+        "defaultMessage": "!!!15 words <em>(Shelley wallet)</em>",
+        "description": "Label for the \"labelDaedalusWalletKind15WordShelley\" checkbox.",
         "end": {
           "column": 3,
+          "line": 65
+        },
+        "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
+        "id": "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley",
+        "start": {
+          "column": 40,
+          "line": 59
+        }
+      },
+      {
+        "defaultMessage": "!!!27 words - paper wallet (Byron legacy wallet)</em>",
+        "description": "Label for the \"labelDaedalusWalletKind27WordPaper\" checkbox.",
+        "end": {
+          "column": 3,
+          "line": 71
+        },
+        "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
+        "id": "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper",
+        "start": {
+          "column": 38,
           "line": 66
-        },
-        "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
-        "id": "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word",
-        "start": {
-          "column": 40,
-          "line": 60
-        }
-      },
-      {
-        "defaultMessage": "!!!15 words",
-        "description": "Label for the \"labelDaedalusWalletKindReward15Word\" checkbox.",
-        "end": {
-          "column": 3,
-          "line": 73
-        },
-        "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
-        "id": "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word",
-        "start": {
-          "column": 39,
-          "line": 67
-        }
-      },
-      {
-        "defaultMessage": "!!!27 words - paper wallet <em>(legacy wallet)</em>",
-        "description": "Label for the \"labelDaedalusWalletKindBalance27Word\" ITN checkbox.",
-        "end": {
-          "column": 3,
-          "line": 80
-        },
-        "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
-        "id": "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn",
-        "start": {
-          "column": 43,
-          "line": 74
-        }
-      },
-      {
-        "defaultMessage": "!!!27 words - paper wallet</em>",
-        "description": "Label for the \"labelDaedalusWalletKindBalance27Word\" checkbox.",
-        "end": {
-          "column": 3,
-          "line": 87
-        },
-        "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
-        "id": "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word",
-        "start": {
-          "column": 40,
-          "line": 81
         }
       },
       {
@@ -10044,41 +10016,41 @@
         "description": "Label for the \"labelYoroiWalletKind\" checkbox.",
         "end": {
           "column": 3,
-          "line": 92
+          "line": 76
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind",
         "start": {
           "column": 24,
-          "line": 88
+          "line": 72
         }
       },
       {
-        "defaultMessage": "!!!15 words <em>(legacy wallet)</em>",
+        "defaultMessage": "!!!15 words <em>(Byron legacy wallet)</em>",
         "description": "Label for the \"labelDaedalusWalletKindBalance15Word\" checkbox.",
         "end": {
           "column": 3,
-          "line": 99
+          "line": 83
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
-        "id": "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word",
+        "id": "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word",
         "start": {
-          "column": 37,
-          "line": 93
+          "column": 41,
+          "line": 77
         }
       },
       {
-        "defaultMessage": "!!!15 words <em>(Reward wallet)</em>",
-        "description": "Label for the \"labelDaedalusWalletKindReward15Word\" checkbox.",
+        "defaultMessage": "!!!15 words <em>(Shelley wallet)</em>",
+        "description": "Label for the \"labelDaedalusWalletKind15WordShelley\" checkbox.",
         "end": {
           "column": 3,
-          "line": 106
+          "line": 90
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
-        "id": "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word",
+        "id": "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word",
         "start": {
-          "column": 36,
-          "line": 100
+          "column": 37,
+          "line": 84
         }
       },
       {
@@ -10086,13 +10058,13 @@
         "description": "Label for the \"labelHardwareWalletKind\" checkbox.",
         "end": {
           "column": 3,
-          "line": 112
+          "line": 96
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind",
         "start": {
           "column": 27,
-          "line": 107
+          "line": 91
         }
       },
       {
@@ -10100,13 +10072,13 @@
         "description": "Label for the \"labelHardwareWalletKindLedger\" checkbox.",
         "end": {
           "column": 3,
-          "line": 117
+          "line": 101
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger",
         "start": {
           "column": 33,
-          "line": 113
+          "line": 97
         }
       },
       {
@@ -10114,13 +10086,13 @@
         "description": "Label for the \"labelHardwareWalletKindTrezor\" checkbox.",
         "end": {
           "column": 3,
-          "line": 122
+          "line": 106
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor",
         "start": {
           "column": 33,
-          "line": 118
+          "line": 102
         }
       },
       {
@@ -10128,13 +10100,13 @@
         "description": "Label for the \"hardwareWalletDisclaimer1\" disclaimer.",
         "end": {
           "column": 3,
-          "line": 128
+          "line": 112
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1",
         "start": {
           "column": 29,
-          "line": 123
+          "line": 107
         }
       },
       {
@@ -10142,13 +10114,13 @@
         "description": "Label for the \"hardwareWalletDisclaimer2\" disclaimer.",
         "end": {
           "column": 3,
-          "line": 134
+          "line": 118
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2",
         "start": {
           "column": 29,
-          "line": 129
+          "line": 113
         }
       },
       {
@@ -10156,13 +10128,13 @@
         "description": "Label for the \"hardwareWalletCheckbox1\" disclaimer.",
         "end": {
           "column": 3,
-          "line": 140
+          "line": 124
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox1",
         "start": {
           "column": 27,
-          "line": 135
+          "line": 119
         }
       },
       {
@@ -10170,13 +10142,13 @@
         "description": "Label for the \"hardwareWalletCheckbox2\" disclaimer.",
         "end": {
           "column": 3,
-          "line": 146
+          "line": 130
         },
         "file": "source/renderer/app/components/wallet/wallet-restore/WalletTypeDialog.js",
         "id": "wallet.restore.dialog.step.walletKind.hardwareWalletCheckbox2",
         "start": {
           "column": 27,
-          "line": 141
+          "line": 125
         }
       }
     ],
