--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -112,6 +112,7 @@
   "global.duration.months": "months",
   "global.duration.seconds": "seconds",
   "global.duration.years": "years",
+  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "This field is required.",
   "global.errors.incompleteMnemonic": "Please enter all {expected} words.",
   "global.errors.invalidEmail": "Invalid email entered, please check.",
@@ -129,6 +130,7 @@
   "global.labels.close": "Close",
   "global.labels.create": "Create",
   "global.labels.filter": "Filter",
+  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "Remove",
   "global.labels.reset": "Reset",
   "global.labels.save": "Save",
@@ -419,6 +421,7 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
+  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "I understand",
   "static.splash.network.flightDescription1": "Thank you for downloading the Daedalus Flight wallet! This version of Daedalus is specially created so users can test new features and we can squash usability bugs before pushing releases to the mainnet production version of the Daedalus wallet. ",
   "static.splash.network.flightDescription2": "Although Flight candidates are designed to test functionality, this is on the mainnet and will <b>be using mainnet ada. Transactions made using Flight candidates will be real ada payments.</b> If you are not a power user, we recommend you stick to using our stable, fully-tested production Daedalus wallet client. It is very important to note that transactions performed in Daedalus Flight are real and your funds will be transferred because the Cardano blockchain will be validating all transactions on mainnet.",
@@ -508,6 +511,18 @@
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "I understand that the only way to recover my wallet if my computer is lost, broken, stolen, or stops working is to use my wallet recovery phrase.",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>I understand that I will need the wallet recovery phrase of this wallet to receive my Incentivized Testnet ada rewards on the Cardano mainnet.</strong>",
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "Verify your wallet recovery phrase by clicking words in the exact order you wrote them down.",
+  "wallet.byron.badge.label": "!!!Byron",
+  "wallet.byron.notification.actionLearnMore": "!!!Learn more",
+  "wallet.byron.notification.actionMove": "!!!Move ada to an existing wallet",
+  "wallet.byron.notification.addWallet": "!!!Create a new wallet",
+  "wallet.byron.notification.addWalletDescription.line1": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.addWalletDescription.line2": "!!!Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
+  "wallet.byron.notification.addWalletTitle": "!!!Create a Shelley wallet",
+  "wallet.byron.notification.learnMore.url": "!!!https://iohk.zendesk.com/hc/en-us/articles/360038726373",
+  "wallet.byron.notification.moveFundsDescription.line1": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.moveFundsDescription.line2": "!!!You can create a {moveFundsLink} or move funds to one of your existing wallets.",
+  "wallet.byron.notification.moveFundsDescription.line2.link.label": "!!!brand new wallet",
+  "wallet.byron.notification.moveFundsTitle": "!!!Move funds from {activeWalletName}",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create wallet",
   "wallet.create.dialog.create.personal.wallet.button.label.itn": "Create Shelley wallet",
@@ -544,15 +559,7 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalus state directory",
   "wallet.import.file.dialog.stateFolderLabel": "Select Daedalus state directory:",
   "wallet.import.file.dialog.title": "Import wallets",
-  "wallet.legacy.badge.label": "Legacy",
-  "wallet.legacy.notification.actionLearnMore": "Learn more",
-  "wallet.legacy.notification.actionMove": "Move ada from this wallet",
-  "wallet.legacy.notification.addWallet": "Create a new Shelley wallet",
-  "wallet.legacy.notification.addWalletTitle": "Create a new wallet",
   "wallet.legacy.notification.descriptionWithFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
-  "wallet.legacy.notification.descriptionWithNoFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. Move ada from this wallet to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
-  "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/360038726373",
-  "wallet.legacy.notification.moveFundsTitle": "Move funds from <q>{activeWalletName}</q>",
   "wallet.navigation.more": "More",
   "wallet.navigation.receive": "Receive",
   "wallet.navigation.send": "Send",
@@ -636,11 +643,9 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "Hardware wallets keep your private keys stored securely on a physical device that is immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you are exposing your hardware wallet private keys to the security risks associated with computers and software.",
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "We strongly recommend that you delete the Balance wallet which is restored from your hardware wallet once you have moved any funds into a Rewards wallet.",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "What kind of Daedalus wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word": "12 words",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word": "27 words - paper wallet",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27 words - paper wallet <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "!!!12 words <em>(Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "!!!15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "!!!27 words - paper wallet (Byron legacy wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "What kind of hardware wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger Nano S or Nano X (Balance wallet)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12, 18 or 24 words - Trezor (Balance wallet)",
@@ -649,8 +654,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "Hardware wallet",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroi wallet",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "What kind of Yoroi wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "!!!15 words <em>(Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "!!!15 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalus paper wallet",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalus wallet",
@@ -829,7 +834,6 @@
   "wallet.transferFunds.dialog2.label.buttonLabel": "Transfer funds",
   "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to the {targetWalletName} wallet.",
   "wallet.transferFunds.dialog2.label.fees": "Fees",
-  "wallet.transferFunds.dialog2.label.to": "To",
   "wallet.transferFunds.dialog2.label.total": "Total",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Type your spending password",
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
