--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -112,6 +112,7 @@
   "global.duration.months": "月",
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
+  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "必須フィールドです",
   "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
@@ -129,6 +130,7 @@
   "global.labels.close": "閉じる",
   "global.labels.create": "作成",
   "global.labels.filter": "フィルター",
+  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "削除",
   "global.labels.reset": "リセット",
   "global.labels.save": "保存する",
@@ -419,6 +421,7 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
+  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "了解しました",
   "static.splash.network.flightDescription1": "Daedalus Flightウォレットをダウンロードいただきありがとうございます。このDaedalusバージョンは、Daedalusウォレットの製品バージョンをメインネットへリリースする前に、ユーザーが新機能をテストし、開発チームが使用性に関するバグに対処するために特別に作成したバージョンです。",
   "static.splash.network.flightDescription2": "Flight候補版は機能性をテストするためにデザインされていますが、これはメインネットに接続されており、<b>メインネットのADAを使用します。Flight候補版を使用して実行されるトランザクションでは実際のADAによる支払いが生じます。</b>パワーユーザー以外は、完全にテスト済みの安定した製品版Daedalusウォレットの使用を継続することを推奨します。Daedalus Flightウォレットで実行されるトランザクションは実際のものであり、すべてのトランザクションはCardanoブロックチェーンにメインネット上で検証されるため、ユーザーの資金は実際に送金されるということを十分に理解してください。",
@@ -508,6 +511,18 @@
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "コンピューターが喪失、故障、盗難、作動不能などとなった場合、ウォレットは復元フレーズを使用することによってのみ復元することができることを理解しました。",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>インセンティブ付きテストネットで得た報酬ADAをCardanoメインネットで受け取る際、このウォレットの復元フレーズが必要であることを理解しました。</strong>",
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "書き留めた通りの正しい順に単語をクリックして、ウォレットの復元フレーズを検証してください。",
+  "wallet.byron.badge.label": "!!!Byron",
+  "wallet.byron.notification.actionLearnMore": "!!!Learn more",
+  "wallet.byron.notification.actionMove": "!!!Move ada to an existing wallet",
+  "wallet.byron.notification.addWallet": "!!!Create a new wallet",
+  "wallet.byron.notification.addWalletDescription.line1": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.addWalletDescription.line2": "!!!Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
+  "wallet.byron.notification.addWalletTitle": "!!!Create a Shelley wallet",
+  "wallet.byron.notification.learnMore.url": "!!!https://iohk.zendesk.com/hc/en-us/articles/360038726373",
+  "wallet.byron.notification.moveFundsDescription.line1": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.moveFundsDescription.line2": "!!!You can create a {moveFundsLink} or move funds to one of your existing wallets.",
+  "wallet.byron.notification.moveFundsDescription.line2.link.label": "!!!brand new wallet",
+  "wallet.byron.notification.moveFundsTitle": "!!!Move funds from {activeWalletName}",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "ウォレットを作成する",
   "wallet.create.dialog.create.personal.wallet.button.label.itn": "Shelleyウォレットを作成する",
@@ -544,15 +559,7 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalusステータスディレクトリー",
   "wallet.import.file.dialog.stateFolderLabel": "Daedalusステータスディレクトリーを選択してください:",
   "wallet.import.file.dialog.title": "ウォレットをインポートする",
-  "wallet.legacy.badge.label": "残高",
-  "wallet.legacy.notification.actionLearnMore": "もっと知る",
-  "wallet.legacy.notification.actionMove": "テストネット用ADAを移し替える",
-  "wallet.legacy.notification.addWallet": "Shelleyウォレットを新規作成する",
-  "wallet.legacy.notification.addWalletTitle": "報酬ウォレットを作成してください",
   "wallet.legacy.notification.descriptionWithFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
-  "wallet.legacy.notification.descriptionWithNoFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. Move ada from this wallet to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
-  "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
-  "wallet.legacy.notification.moveFundsTitle": "「{activeWalletName}」のテストネット用ADAを移し替えてください",
   "wallet.navigation.more": "その他",
   "wallet.navigation.receive": "入金",
   "wallet.navigation.send": "送金",
@@ -636,11 +643,9 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "ハードウェアウォレットでは、ウィルスやソフトウェアのバグなどコンピューターにありがちな脅威に晒されることなく、物理的なデバイス上に秘密鍵を安全に保管できます。ハードウェアウォレットの復元フレーズは常にオフラインで保管してください。Daedalusにハードウェアウォレットの復元フレーズを入力することにより、ハードウェアウォレットの秘密鍵をコンピューターやソフトウェアに関連するセキュリティリスクに晒すことになります。",
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットから復元した残高ウォレットは、資金を報酬ウォレットに移したら直ちに削除することを強くお勧めします。",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "どのDaedalusウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word": "12語",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12語 <em>(Byronレガシーウォレット)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word": "27語 - ペーパーウォレット",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27語 - ペーパーウォレット <em>(Byronレガシーウォレット)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15語 <em>(Shelleyウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "!!!12 words <em>(Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "!!!15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "!!!27 words - paper wallet (Byron legacy wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "どのタイプのハードウェアウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12語、18語、または24語 - Ledger Nano SまたはNano X (残高ウォレット)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12語、18語、または24語 - Trezor (残高ウォレット)",
@@ -649,8 +654,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "ハードウェアウォレット",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroiウォレット",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "どのタイプのYoroiウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15語 <em>(Byronレガシーウォレット)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15語 <em>(Shelleyウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "!!!15 words <em>(Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "!!!15 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalusペーパーウォレット",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalusウォレット",
@@ -829,7 +834,6 @@
   "wallet.transferFunds.dialog2.label.buttonLabel": "資金を移す",
   "wallet.transferFunds.dialog2.label.description": "sourceWalletNameウォレットからtargetWalletNameウォレットへ移し替えます。",
   "wallet.transferFunds.dialog2.label.fees": "手数料",
-  "wallet.transferFunds.dialog2.label.to": "送信先",
   "wallet.transferFunds.dialog2.label.total": "合計",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "送信時パスワードを入力してください",
   "wallet.transferFunds.dialog2.passphraseLabel": "送信時パスワード",
